--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "^1.0.22"
+    "server": "node index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,11 @@
     "helmet": "^3.21.2",
     "knex": "^0.20.9",
     "node": "^13.8.0",
-    "nodemon": "^2.0.2",
     "sqlite3": "^4.1.1"
+  }
+
+  ,
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
