--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "- Authentication.\r - Express Middleware.\r - Password Hashing.\r - Sessions\r - Cookies",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node index.js",
     "start": "node index.js"
   },
@@ -20,14 +19,14 @@
   "homepage": "https://github.com/Katrina-Dierking/node-auth1-project#readme",
   "dependencies": {
     "bcrypt": "^3.0.8",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "helmet": "^3.21.2",
     "knex": "^0.20.9",
     "node": "^13.8.0",
     "sqlite3": "^4.1.1"
-  }
-
-  ,
+  },
   "devDependencies": {
     "nodemon": "^2.0.2"
   }
